# HURC_Biomech

./: README.md
src/: CMakeLists.txt  DESIGN.md  LCD_interface.c  LCD_interface.h  README.md  actions.c  actions.h  actuator_control.c  actuator_control.h  actuator_interface.c  actuator_interface.h  basic_LCD.c  basic_LCD.pio  bitmapFont.h  flash_interface.c  flash_interface.h  graphics.c  graphics.h  icons.h  menu.c  menu.h  menu_defs.h  touch_interface.c  touch_interface.h
